--- a/ci-charts/ksm-mysql-with-monitoring/ksm-mysql-with-monitoring.yaml
+++ b/ci-charts/ksm-mysql-with-monitoring/ksm-mysql-with-monitoring.yaml
@@ -7,4 +7,5 @@ charts:
   - chart: prometheus
     version: 6.10.0
     offered: false
+    overrideValuesFile: override-prometheus.yaml
     scope: namespace
