--- a/mysql-operator/ksm/mysql-cluster.yaml
+++ b/mysql-operator/ksm/mysql-cluster.yaml
@@ -3,6 +3,8 @@ charts:
   - chart: mysql-operator
     offered: false
     scope: cluster
+    version: 0.1.0+master
   - chart: mysql
     offered: true
     scope: namespace
+    version: 1.3.0
