--- a/mysql-operator/mysql-cluster/templates/service-loadbalancer.yaml
+++ b/mysql-operator/mysql-cluster/templates/service-loadbalancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service-lb
+  name: {{ include "mysql-cluster.clusterName" . }}
 spec:
   selector:
     app.kubernetes.io/managed-by: mysql.presslabs.org
