--- a/mysql-operator/mysql-cluster/values.yaml
+++ b/mysql-operator/mysql-cluster/values.yaml
@@ -6,7 +6,7 @@
 replicas: 1
 
 ## MySQL connect credentials, those credentials will be provisioned in the cluster
-rootPassword: ""
+rootPassword: "root"
 appUser: ""
 appPassword: ""
 appDatabase: "mydb"
