Remove cluster scope, ci will use mysql-operator now.

--- a/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
+++ b/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
@@ -1,6 +1,7 @@
 alertmanager:
   enabled: false
 server:
+  image: dev.registry.pivotal.io/container-services-manager-ci/prom/prometheus
   persistentVolume:
     enabled: false
 kubeStateMetrics:
