Fix mysql-with-monitoring prometheus override

--- a/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
+++ b/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
@@ -1,7 +1,8 @@
 alertmanager:
   enabled: false
 server:
-  image: dev.registry.pivotal.io/container-services-manager-ci/prom/prometheus
+  image:
+    repository: dev.registry.pivotal.io/container-services-manager-ci/prom/prometheus
   persistentVolume:
     enabled: false
 kubeStateMetrics:
