- For mysql-operator add the ability to set imagePullSecrets - For prometheus, add ability to set imagePullSecrets
Co-authored-by: Matt Cholick <mcholick@vmware.com>
Co-authored-by: Maggie Ambrose <mambrose@vmware.com>

--- a/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
+++ b/mysql-with-monitoring/ksm-mysql-with-monitoring/overrides/override-prometheus.yaml
@@ -3,6 +3,10 @@ alertmanager:
 server:
   persistentVolume:
     enabled: false
+  image:
+    repository: dev.registry.pivotal.io/container-services-manager-ci/prom/prometheus
+imagePullSecrets:
+  - name: registry-secret
 kubeStateMetrics:
   enabled: false
 pushgateway:
