--- a/mysql-operator/ksm/ksm.yaml
+++ b/mysql-operator/ksm/ksm.yaml
@@ -4,6 +4,7 @@ charts:
     version: 0.1.1+master
     offered: false
     scope: cluster
+    overrideValuesFile: override-mysql.yaml
   - chart: mysql-cluster
     version: 0.2.0
     offered: true
