Replace marketplace-name with offer-name
[#174751323]

Co-authored-by: Sam Gunaratne <sgunaratne@vmware.com>

--- a/ci-charts/tsmgr-mysql-operator/tsmgr.yaml
+++ b/ci-charts/tsmgr-mysql-operator/tsmgr.yaml
@@ -1,4 +1,4 @@
-marketplace-name: mysql-operator-combined
+offer-name: mysql-operator-combined
 charts:
   - chart: mysql-combined
     version: 0.3.2
