Make a super obvious link to our sample repo at the top of...
[#174992161]

Clarifying the ci-charts folder is for internal usage
Documenting all chart folders cases
Changing some Pivotal word to Tanzu

Co-authored-by: Joe Eltgroth <jeltgroth@vmware.com>

--- a/ci-charts/tsmgr-prometheus-operator/bind.yaml
+++ b/ci-charts/tsmgr-prometheus-operator/bind.yaml
@@ -1,5 +1,5 @@
 # The bind.yaml is optional.
-# Apps running in Pivotal Application Service gain access to bound service instances through an 
+# Apps running in Tanzu Application Service gain access to bound service instances through an
 #     environment variable named VCAP_SERVICES consisting of a credentials map.
 # Create a binding template with desired bind format for the chart to be exposed. 
 #
